Add real octovalve photos to carousel

--- a/index.html
+++ b/index.html
@@ -579,8 +579,8 @@ footer {
   </div>
   <div class="carousel-wrap">
     <div class="carousel" id="carousel">
-      <div class="carousel-slide">🔧 The Octovalve — 8-port rotary valve managing all thermal flows in Model Y</div>
-      <div class="carousel-slide">🌡️ Heat Pump System — Replaced the Model 3 "Superbottle" with superior efficiency</div>
+      <div class="carousel-slide" style="background:url('octovalve_closeup.jpg') center/cover no-repeat"><span style="position:absolute;bottom:12px;left:12px;background:rgba(227,25,55,.8);padding:4px 12px;border-radius:20px;font-family:var(--font-display);font-size:11px;font-weight:700">THE OCTOVALVE — CLOSE UP</span></div>
+      <div class="carousel-slide" style="background:url('octovalve_installed.jpg') center/cover no-repeat"><span style="position:absolute;bottom:12px;left:12px;background:rgba(227,25,55,.8);padding:4px 12px;border-radius:20px;font-family:var(--font-display);font-size:11px;font-weight:700">INSTALLED IN MODEL Y</span></div>
       <div class="carousel-slide">⚡ 5 Positions — Battery heating, cabin cooling, motor thermal management & more</div>
       <div class="carousel-slide">🐙 One valve to rule them all — replaces multiple individual valves</div>
     </div>
