Replace emoji octopus with actual mascot image everywhere

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ footer {
 
 <!-- ===== SPLASH SCREEN ===== -->
 <div id="splash">
-  <div class="octopus-splash">🐙</div>
+  <div class="octopus-splash"><img src="mascot.jpg" alt="Octovalve" style="width:80px;height:80px;border-radius:50%;object-fit:cover"></div>
   <h1>OCTOVALVE</h1>
   <div class="loader"></div>
 </div>
@@ -545,7 +545,7 @@ footer {
 <!-- ===== NAVBAR ===== -->
 <nav id="navbar">
   <div class="nav-inner">
-    <a href="#" class="nav-logo"><span>🐙</span> OCTOVALVE</a>
+    <a href="#" class="nav-logo"><img src="mascot.jpg" alt="" style="width:28px;height:28px;border-radius:50%;object-fit:cover"> OCTOVALVE</a>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
       <li><a href="#proof">Proof</a></li>
@@ -570,7 +570,7 @@ footer {
 
 <!-- ===== HERO ===== -->
 <section class="hero">
-  <div class="hero-octopus">🐙</div>
+  <div class="hero-octopus"><img src="mascot.jpg" alt="Octovalve Mascot" style="width:120px;height:120px;border-radius:50%;object-fit:cover;animation:float 6s ease-in-out infinite"></div>
   <h1>Hidden in Every<br><span class="accent">Tesla Model Y</span></h1>
   <p class="subtitle">The Octovalve is Tesla's most brilliant piece of thermal engineering — a rotary valve with 8 ports and 5 positions, controlling the entire heat pump system. And nobody talks about it.</p>
   <div class="hero-buttons">
@@ -672,15 +672,15 @@ footer {
   </div>
   <div class="tweets-grid">
     <div class="glass-card tweet-card reveal">
-      <div class="tweet-handle"><div class="avatar">🐙</div> @_Octovalve</div>
+      <div class="tweet-handle"><div class="avatar"><img src="mascot.jpg" alt="" style="width:100%;height:100%;border-radius:50%;object-fit:cover"></div> @_Octovalve</div>
       <p class="tweet-text">@elaborateElona Fun fact: the Model Y heat pump you're praising uses a single 8-port rotary valve called the Octovalve. It replaced the Model 3's Superbottle and manages ALL thermal flows. When will Tesla acknowledge this masterpiece? 🐙 $OCTOVALVE</p>
     </div>
     <div class="glass-card tweet-card reveal">
-      <div class="tweet-handle"><div class="avatar">🐙</div> @_Octovalve</div>
+      <div class="tweet-handle"><div class="avatar"><img src="mascot.jpg" alt="" style="width:100%;height:100%;border-radius:50%;object-fit:cover"></div> @_Octovalve</div>
       <p class="tweet-text">@Tesla The Octovalve has 8 ports. 5 positions. It controls battery temp, cabin HVAC, and motor cooling with ONE rotary valve. 2M+ Model Ys have it. 0 acknowledgements. We're not stopping. 🐙 $OCTOVALVE</p>
     </div>
     <div class="glass-card tweet-card reveal">
-      <div class="tweet-handle"><div class="avatar">🐙</div> @_Octovalve</div>
+      <div class="tweet-handle"><div class="avatar"><img src="mascot.jpg" alt="" style="width:100%;height:100%;border-radius:50%;object-fit:cover"></div> @_Octovalve</div>
       <p class="tweet-text">Elon said Model Y heat pump = "some of the best engineering I've ever seen." The Octovalve IS that engineering. A single valve managing the entire thermal system. Give it its flowers. 🐙 $OCTOVALVE</p>
     </div>
   </div>
@@ -688,7 +688,7 @@ footer {
 
 <!-- ===== MISSION ===== -->
 <section id="mission" class="mission">
-  <div class="mission-emoji reveal">🐙</div>
+  <div class="mission-emoji reveal"><img src="mascot.jpg" alt="Octovalve" style="width:100px;height:100px;border-radius:50%;object-fit:cover"></div>
   <div class="section-tag reveal">The Mission</div>
   <h2 class="section-title reveal">The campaign won't stop until Tesla officially acknowledges the Octovalve</h2>
   <p class="section-sub reveal">Every Model Y owner deserves to know about the rotary masterpiece hidden beneath their vehicle. We won't rest until Elon tweets "Octovalve." Join the movement.</p>
