Remove all Superbottle mentions

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@ footer {
     </div>
     <div class="glass-card gradient-border about-card reveal">
       <h3>⚡ Why It Matters</h3>
-      <p>The Model 3 used a "Superbottle" — a manifold combining multiple valves and a coolant reservoir. The Model Y's Octovalve took that concept and leapfrogged it. By consolidating all thermal routing into one rotary actuator, Tesla achieved fewer failure points, faster thermal response times, and the ability to run a proper heat pump system in cold weather. Elon Musk himself called the heat pump engineering "some of the best engineering I've ever seen." Yet the Octovalve remains unacknowledged.</p>
+      <p>Before the Octovalve, Tesla used multiple individual solenoid valves to manage coolant routing. The Octovalve consolidated all thermal routing into one rotary actuator — fewer failure points, faster thermal response times, and the ability to run a proper heat pump system in cold weather. Elon Musk himself called the heat pump engineering "some of the best engineering I've ever seen." Yet the Octovalve remains unacknowledged.</p>
     </div>
   </div>
 </section>
@@ -673,7 +673,7 @@ footer {
   <div class="tweets-grid">
     <div class="glass-card tweet-card reveal">
       <div class="tweet-handle"><div class="avatar"><img src="mascot.jpg" alt="" style="width:100%;height:100%;border-radius:50%;object-fit:cover"></div> @_Octovalve</div>
-      <p class="tweet-text">@elaborateElona Fun fact: the Model Y heat pump you're praising uses a single 8-port rotary valve called the Octovalve. It replaced the Model 3's Superbottle and manages ALL thermal flows. When will Tesla acknowledge this masterpiece? 🐙 $OCTOVALVE</p>
+      <p class="tweet-text">@elaborateElona Fun fact: the Model Y heat pump you're praising uses a single 8-port rotary valve called the Octovalve. 8 ports. 5 positions. Manages ALL thermal flows. When will Tesla acknowledge this masterpiece? 🐙 $OCTOVALVE</p>
     </div>
     <div class="glass-card tweet-card reveal">
       <div class="tweet-handle"><div class="avatar"><img src="mascot.jpg" alt="" style="width:100%;height:100%;border-radius:50%;object-fit:cover"></div> @_Octovalve</div>
