--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@ footer {
       <h3>"Some of the best engineering I've ever seen"</h3>
       <p>Elon Musk publicly praised the Model Y heat pump system — the very system powered by the Octovalve — calling its engineering exceptional. The tweet went viral, yet the Octovalve itself was never named.</p>
       <div class="proof-date">March 24, 2020</div>
-      <a href="https://x.com/elonmusk/status/1242224338711076865" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">View Tweet →</a>
+      <a href="https://x.com/elonmusk/status/1242224338711076866" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">View Tweet →</a>
     </div>
     <div class="glass-card gradient-border proof-card reveal">
       <img src="octovalve_installed.jpg" alt="Octovalve installed in Model Y" style="width:100%;height:180px;object-fit:cover;border-radius:8px;margin-bottom:12px">
@@ -650,7 +650,7 @@ footer {
       <h3>Model Y Heat Pump Deep Dive</h3>
       <p>InsideEVs published a detailed analysis of the Model Y's heat pump system, documenting how the Octovalve's 8-port design enables 5 distinct thermal routing configurations — from battery preconditioning to cabin heat recapture.</p>
       <div class="proof-date">2020</div>
-      <a href="https://insideevs.com/news/405857/tesla-model-y-heat-pump-details/" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">Read Article →</a>
+      <a href="https://insideevs.com/news/420794/sandy-munro-explains-octovalve-tesla-model-y/" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">Read Article →</a>
     </div>
     <div class="glass-card gradient-border proof-card reveal">
       <img src="octovalve_closeup.jpg" alt="Octovalve teardown" style="width:100%;height:180px;object-fit:cover;border-radius:8px;margin-bottom:12px">
@@ -658,7 +658,7 @@ footer {
       <h3>Octovalve Teardown Analysis</h3>
       <p>Professional engineering teardown confirmed the Octovalve is a single rotary actuator managing all coolant pathways. The analysis highlighted how it reduces complexity vs. the Model 3's multiple solenoid valve approach.</p>
       <div class="proof-date">2021</div>
-      <a href="https://www.e-mobilityengineering.com/octovalve" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">Read Teardown →</a>
+      <a href="https://www.emobility-engineering.com/tesla-octovalve/" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">Read Teardown →</a>
     </div>
     <div class="glass-card gradient-border proof-card reveal">
       <img src="octovalve_installed.jpg" alt="Munro teardown" style="width:100%;height:180px;object-fit:cover;border-radius:8px;margin-bottom:12px">
@@ -666,7 +666,7 @@ footer {
       <h3>Sandy Munro's Model Y Teardown</h3>
       <p>Munro Live's comprehensive Model Y teardown identified the Octovalve as a key engineering innovation, noting its elegant simplicity in managing the vehicle's entire thermal system through a single component.</p>
       <div class="proof-date">2021</div>
-      <a href="https://www.youtube.com/watch?v=FqpfYTi05RI" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">Watch Teardown →</a>
+      <a href="https://www.youtube.com/watch?v=eGffUODWWSE" target="_blank" style="display:inline-block;margin-top:8px;color:var(--red);font-size:.85rem;font-weight:600">Watch Teardown →</a>
     </div>
   </div>
 </section>
