--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" href="favicon.ico">
 <title>$OCTOVALVE — Hidden in Every Tesla Model Y</title>
 <meta name="description" content="The Octovalve is Tesla's most ingenious engineering easter egg. A rotary valve with 8 ports and 5 positions, hidden inside every Model Y.">
 <link rel="preconnect" href="https://fonts.googleapis.com">
